change all getSession to withSession